--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,190 @@
 body {
-    background-image: url(https://i.pinimg.com/originals/78/37/8a/78378a80e6fb911b38bf60291bb49bd8.gif);
-    color: BlueViolet;
-    margin: 5vw;
-    text-align: center;
-    font-family: 'Papyrus';
-    
-  }
+  background-image: url(/img/Spazzyback.gif);
+  color: BlueViolet;
+  margin: 0 auto;
+  text-align: center;
+  font-family: 'Papyrus';
   
-  div {
-    background-image: url(https://img.freepik.com/free-photo/design-space-paper-textured-background_53876-42312.jpg?w=2000);
-    padding: 5vw;
-    border: 5px ridge;
-  }
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+}
+
+.navi {
+  background:cornsilk ;
+  padding: 1vw;
+  flex: 1;
+  text-decoration: none;
+  color:darkgoldenrod;
+  font-size: large;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  align-items: center;
+}
+
+.navi:hover {
+  border: 0.2vw inset;
+  border-color: white;
+}
+
+#blankSpace {
+  flex: 5;
+}
+
+#navImg {
+  object-fit: cover;
+  height: 7vh;
+  flex: 0;
+  background: cornsilk;
+  border: 0.2vw ridge;
+}
+
+header {
+  background-image: url(/img/Notebook.jpeg);
+  background-size: cover;
+  height: 70vh;
+  align-items: center;
+  background-position: center;
+
+}
+
+H1 {
+  margin-top: 10vw;
+}
+
+section {
+  display: flex;
+  justify-content: space-around;
+}
+
+#Mohawk {
+  align-items: center;
+  height: 25vh;
+}
+
+img:hover {
+  border: 0.4vw inset;
+  background-image: url(/img/spazzyGif.gif);
+}
+
+.logo {
+  object-fit: cover;
+  height: 6vh;
+}
   
   p:hover {
     color: black;
   }
-  
-  ul:hover {
-    color: black;
-  }
-  
-  H1:hover {
-    font-size: 32pt;
-    font-weight: bolder;
-    text-shadow: 2px 2px Chartreuse;
-  }
-  
-  H2:hover {
-    font-size: 28pt;
-    font-weight: bolder;
-    text-shadow: 2px 2px Chartreuse;
-  }
-  
-  H3:hover {
-    font-size: 24pt;
-    font-weight: bolder;
-    text-shadow: 2px 2px Chartreuse;
-  }
-  
-  img {
-    width: 300px;
-    border-radius: 50px;
-    border: 3px outset;
-    background: white;
-  }
-  
-  img:hover {
-    border: 3px inset;
-      background-image: url(https://64.media.tumblr.com/661257c6e0872fbe2a1a63eb4ee6710f/e93fd7e323bf1955-e1/s400x600/0560f4ff8c8f14b670d190b0e4cf6b90e7766cbe.gif);
-  }
-  
-  a {
-    text-decoration: none;
-    font-weight: bold;
-    font-family: 'copperplate';
-    color: Teal;
-  }
-  
-  a:hover {
-    border: 3px inset;
-    background: white;
+
+  .content {
+    background-image: url(/img/paper.jpeg);
+    border: 0.4vw ridge;
+    flex: 1;
+    margin: 0 auto;
+    width: 100vw;
   }
 
-  a:visited {
-    font-style: italic;
-    border-style: double;
-    border-color:rgb(255, 216, 154)
+.content:hover {
+  flex: 2;
+}
+
+.stud {
+  object-fit: cover;
+  height: 45vh;
+  width: 45vw;
+  border-radius: 50px;
+  border: 0.4vw outset;
+}
+
+#scroll {
+  display: flex;
+  justify-content: space-around;
+}
+
+#cactus {
+  object-fit:cover;
+  height: 40vh;
+  width: 85%;
+  object-position: top;
+  border: 0.4vw outset;
+  border-radius: 50px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+  ul:hover {
+    color:black;
+  }
+
+  #Info {
+    background: cornsilk;
+    align-items: center;
+    margin: -1.5vw;
+    padding: 2vw;
+    padding-bottom: 0px;
+  }
+
+  #info {
+    display: flex;
+    background: blanchedalmond;
+    justify-content: space-around;
+    padding: 2vw;
+    padding-bottom: 20vw;
+  }
+
+  .C:hover {
+    background:cornsilk;
+  }
+
+  @media only screen and (max-width: 768px) {
+
+    section {
+      flex-direction: column;
+    }
+
+    nav {
+      flex-direction:column-reverse;
+    }
+
+    #navImg {
+      height: 3vh;
+      width: 10vw;
+    }
+
+    header {
+      height: 90vh;
+      background-position: center;
+    }
+
+    #info {
+      flex-direction: column;
+    }
+
+    #Info {
+      margin: 0 auto;
+      padding-bottom: 0;
+      margin-bottom: -2vh;
+    }
+
+    .sem1 {
+      display: flex;
+    justify-content: space-between;
+    align-items: center
+    }
+
+    #scroll {
+      overflow-x:scroll;
+      width:90vw;
+      justify-content: flex-start;
+      box-shadow: 1vw 0 1vw gray;
+    }
+
+    .stud {
+      width: 80vw;
+      object-position: center;
+    }
+    
   }
