--- a/css/mam.css
+++ b/css/mam.css
@@ -46,7 +46,7 @@ body {
   header {
     font-size: 2em;
     text-align: center;
-    background-image: url(/img/notebook.jpeg);
+    background-image: url(./img/notebook.jpeg);
     background-size: cover;
     height: 60vh;
     background-position: center;
@@ -55,7 +55,7 @@ body {
   }
 
   .Content {
-    background-image: url(/img/paper.jpeg);
+    background-image: url(./img/paper.jpeg);
     border: 0.4vw ridge;
     flex: 1;
     margin: 0 auto;
